k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: productmanagement
  labels:
    name: productmanagement
    environment: development
