k8s/sqlserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-service
  namespace: productmanagement
  labels:
    app: sqlserver
spec:
  type: ClusterIP
  ports:
  - port: 1433
    targetPort: 1433
    protocol: TCP
    name: mssql
  selector:
    app: sqlserver
